finish date analysis

--- a/scratch/date_analysis.ipynb
+++ b/scratch/date_analysis.ipynb
@@ -34,7 +34,40 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "df = pd.read_csv('4digit_possibility_counts.csv')"
+    "df = pd.read_csv('4digit_possibillity_counts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([ 218.,  329.,  413.,  622.,  628.,  709.,  712.,  718.,  719.,\n",
+       "        731.,  811.,  821.,  827.,  902.,  905.,  908.,  916.,  928.,\n",
+       "       1114., 1205., 1207., 1213., 1216., 1217., 1219., 1228., 1231.])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "df[df.max_pos < 3].to_numpy()[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[ 218,  329,  413,  622,  628,  709,  712,  718,  719,\n",
+    "        731,  811,  821,  827,  902,  905,  908,  916,  928,\n",
+    "       1114, 1205, 1207, 1213, 1216, 1217, 1219, 1228, 1231]"
    ]
   },
   {
