add percentae info

--- a/scratch/date_analysis.ipynb
+++ b/scratch/date_analysis.ipynb
@@ -39,24 +39,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([ 218.,  329.,  413.,  622.,  628.,  709.,  712.,  718.,  719.,\n",
-       "        731.,  811.,  821.,  827.,  902.,  905.,  908.,  916.,  928.,\n",
-       "       1114., 1205., 1207., 1213., 1216., 1217., 1219., 1228., 1231.])"
+       "array([[1231.        ,    4.93150685],\n",
+       "       [1213.        ,    6.02739726],\n",
+       "       [1207.        ,    6.02739726],\n",
+       "       [1217.        ,    6.30136986],\n",
+       "       [1216.        ,    6.30136986],\n",
+       "       [ 709.        ,    6.84931507],\n",
+       "       [ 413.        ,    6.84931507],\n",
+       "       [ 821.        ,    6.84931507],\n",
+       "       [ 719.        ,    7.39726027],\n",
+       "       [ 916.        ,    7.39726027],\n",
+       "       [1228.        ,    8.21917808],\n",
+       "       [ 827.        ,    8.49315068],\n",
+       "       [1205.        ,    8.49315068],\n",
+       "       [ 329.        ,    8.76712329],\n",
+       "       [ 718.        ,    9.04109589],\n",
+       "       [ 908.        ,    9.04109589],\n",
+       "       [1219.        ,    9.04109589],\n",
+       "       [ 811.        ,    9.31506849],\n",
+       "       [ 622.        ,    9.5890411 ],\n",
+       "       [ 218.        ,   10.4109589 ],\n",
+       "       [ 905.        ,   10.95890411],\n",
+       "       [ 628.        ,   11.23287671],\n",
+       "       [ 712.        ,   11.78082192],\n",
+       "       [1114.        ,   12.32876712],\n",
+       "       [ 928.        ,   12.87671233],\n",
+       "       [ 731.        ,   12.87671233],\n",
+       "       [ 902.        ,   14.24657534]])"
       ]
      },
      "metadata": {},
-     "execution_count": 18
+     "execution_count": 19
     }
    ],
    "source": [
-    "df[df.max_pos < 3].to_numpy()[:,0]"
+    "ye = df[df.max_pos < 3].to_numpy()[:, (0, 2)]\\\n",
+    "\n",
+    "ye[:,-1] = 100*(ye[:,-1] - 1)\n",
+    "\n",
+    "ye[np.argsort(ye[:, 1])]"
    ]
   },
   {
